k8s/04-svc-argo-kanary-kdvops.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdvops-web-svc
  namespace: kdvops-ns
spec:
  selector:
    app: kdvops-web
  ports:
    - port: 80
      targetPort: 80
