k8s/04-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kdvops-web-svc
  namespace: kdvops-ns
spec:
  selector:
    app: kdvops-web
  #type: LoadBalancer
  ports:
    #- protocol: TCP
    - name: http
      port: 8000
      targetPort: 80
